# libmoss

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  activate-git-hooks.sh  check-for-illegal-patterns.awk  dscanner.ini  dub.json  meson.build  meson_options.txt  mkbind.sh  shallow-clone.diff
.github/: CODEOWNERS
.github/workflows/: d.yml
cpuinfo-test-data/: AMD-Epyc-7R13-cpuinfo.txt  AMD-FX-8350-cpuinfo.txt  AMD-PhII-1090T-cpuinfo.txt  AMD-R7-3700X-cpuinfo.txt  AMD-R7-7700X-cpuinfo.txt  AMD-R9-5950X-cpuinfo.txt  intel-Xeon-8259CL-cpuinfo.txt  intel-Xeon-8375C-cpuinfo.txt  intel-Xeon-E5-2665-cpuinfo.txt  intel-Xeon-E5-2670v2-cpuinfo.txt  intel-Xeon-E5-2686v4-cpuinfo.txt  intel-i5-1230U-cpuinfo.txt  intel-i5-3350P-cpuinfo.txt  intel-i5-4460-cpuinfo.txt  intel-i7-1065G7-cpuinfo.txt  intel-i7-6700K-cpuinfo.txt
examples/: dub.json
examples/source/: commit.d  common.d  config.d  describe.d  fetch.d  general.d  index_pack.d  init.d  log.d  push.d  show_index.d  stash.d  status.d  tag.d
moss-config/: README.md  dub.json
moss-config/source/moss/config/: package.d
moss-config/tests/: sequence_structs.yml
moss-core/: README.md  dub.json
moss-core/cpuinfo-test-data/: AMD-R7-1700-cpuinfo.txt  AMD-R7-5850U-cpuinfo.txt  intel-i7-3770K-cpuinfo.txt
moss-core/source/moss/core/: encoding.d  store.d  util.d
moss-db/: .gitignore  dub.json  meson.build
moss-db/source/moss/db/keyvalue/driver/lmdb/: driver.d  iterator.d
moss-db/source/moss/db/keyvalue/orm/: create.d  load.d  package.d  tests.d
moss-deps/: .gitignore  README.md  meson.build
moss-fetcher/: dub.json
moss-fetcher/source/moss/fetcher/: messaging.d  queue.d  worker.d
moss-format/: .gitignore  README.md  meson.build
moss-vendor/: .gitmodules  meson_options.txt
scripts/: test.sh
serpent-style/: git-pre-commit-hook.sh  setup.sh  sync.sh  update-format.sh
serpent-style/templates/: dlang.d  yaml.yml
source/: meson.build
source/elf/: low.d  low64.d
source/elf/sections/: dynamiclinkingtable.d  package.d
source/git2/: bindings.d  enums.d  extra.d
source/lmdb/: binding.d
source/moss/: package.d  platform.d  store.d  util.d
source/moss/cli/: package.d
source/moss/config/: meson.build  package.d  profile.d  repo.d
source/moss/config/io/: configuration.d  package.d  schema.d  section.d  snippet.d  yml_helper.d
source/moss/config/repo/: configuration.d  package.d  type.d
source/moss/config/snippet/: package.d
source/moss/core/: c.d  cpuinfo.d  encoding.d  errors.d  fetchcontext.d  ftw.d  ioutil.d  logger.d  logging.d  memoryinfo.d  meson.build  mounts.d  mounts2.d  package.d  platform.d  sizing.d  store.d  util.d
source/moss/core/c/: files.d  mounts.d  package.d
source/moss/core/cli/: package.d
source/moss/core/download/: manager.d  package.d  store.d
source/moss/db/: encoding.d  entry.d  interfaces.d  meson.build  package.d
source/moss/db/keyvalue/: errors.d  impl.d  interfaces.d  package.d
source/moss/db/keyvalue/driver/: lmdb.d  memory.d  package.d
source/moss/db/keyvalue/driver/lmdb/: bucket_iterator.d  driver.d  iterator.d  package.d  transaction.d
source/moss/db/keyvalue/orm/: create.d  list.d  load.d  package.d  remove.d  save.d  tests.d  types.d
source/moss/db/rocksdb/: bucket.d  db.d  iterator.d  package.d  tests.d  transform.d
source/moss/download/: manager.d  package.d  store.d
source/moss/fetcher/: controller.d  meson.build  messaging.d  package.d  queue.d  result.d  worker.d
source/moss/format/: meson.build
source/moss/format/binary/: archive_header.d  contentPayload.d  content_payload.d  encoder.d  endianness.d  header.d  index.d  indexPayload.d  index_payload.d  layout.d  layoutPayload.d  layout_payload.d  metaPayload.d  meta_payload.d  package.d  payload.d  payload_header.d  reader.d  record.d  writer.d
source/moss/format/binary/legacy/: content_payload.d  encoder.d  index.d  index_payload.d  layout.d  layout_payload.d  meta_payload.d  package.d  payload.d  record.d
source/moss/format/binary/payload/: header.d  package.d
source/moss/format/binary/payload/content/: package.d
source/moss/format/binary/payload/index/: entry.d  package.d  pair.d
source/moss/format/binary/payload/kvpair/: package.d
source/moss/format/binary/payload/layout/: entry.d  entryset.d  package.d
source/moss/format/binary/payload/meta/: package.d  record.d  record_pair.d
source/moss/format/binary/reader/: package.d  token.d  zstd_token.d
source/moss/format/binary/repo/: package.d  repo_writer.d
source/moss/format/binary/writer/: package.d  token.d  zlib_token.d  zstd_token.d
source/moss/format/source/: buildDefinition.d  buildOptions.d  build_definition.d  build_options.d  macros.d  package.d  packageDefinition.d  package_definition.d  path_definition.d  schema.d  script.d  sourceDefinition.d  source_definition.d  spec.d  tuningFlag.d  tuningGroup.d  tuning_flag.d  tuning_group.d  upstreamDefinition.d  upstream_definition.d  ymlHelper.d  yml_helper.d
source/xxhash/: binding.d
source/zstd/: context.d  dict.d  func.d  package.d
source/zstd/c/: typedefs.d
subprojects/: README.md  zstdoubledee
subprojects/ddbus/: meson.build
subprojects/libgit2/: meson.build  meson_options.txt
subprojects/libgit2-d/: .gitignore  README.md  meson.build
subprojects/lmdb-d/: .gitignore  dub.json  meson.build
subprojects/lmdb-d/source/lmdb/: macros.d  package.d
subprojects/xxhash-d/: .gitignore  README.md  mkbind.sh
subprojects/xxhash-d/test/: 1  2
subprojects/zstdoubledee/: LICENSE  dub.json  meson_options.txt
templates/: python3.py  shell.sh
test/: 3  repo.yml
tests/: meson.build  sequences.d  simple.d  test_main.d
tests/config/: sequences.d
tests/core/: AMD-Epyc-7571-cpuinfo.txt  AMD-R7-2700X-cpuinfo.txt  AMD-R9-3900X-cpuinfo.txt  intel-c2q-q9400-cpuinfo.txt  intel-i5-2500-cpuinfo.txt  intel-i7-2600K-cpuinfo.txt  intel-i9-12900HK-cpuinfo.txt
tests/etc/boulder/profiles.conf.d/: standard.conf
tests/usr/share/moss/repos.conf.d/: base.conf  will_be_disabled.conf
tests/usr/share/moss/sequences.conf.d/: base.conf
(+37 files in other folders)
