project(
  'libgit2',
  ['c'],
  version: '1.6.2',
  default_options: ['c_std=gnu89', 'warning_level=0'],
  license: 'GPLv2 + Linking Exception',
)

zlib = dependency('zlib')
openssl = dependency('openssl')

regex_backend = get_option('regex')
sha1_backend = get_option('sha1')
sha256_backend = get_option('sha256')

########## Base files and define flags

git2_include = include_directories('include')
 
defines = ['-DLIBGIT2_NO_FEATURES_H=']
srcs = files(
  # libgit2 itself
  'src/libgit2/odb.c',
  'src/libgit2/diff_driver.c',
  'src/libgit2/streams/tls.c',
  'src/libgit2/reset.c',
  'src/libgit2/threadstate.c',
  'src/libgit2/trace.c',
  'src/libgit2/diff_parse.c',
  'src/libgit2/streams/openssl.c',
  'src/libgit2/streams/stransport.c',
  'src/libgit2/streams/openssl_legacy.c',
  'src/libgit2/streams/socket.c',
  'src/libgit2/streams/openssl_dynamic.c',
  'src/libgit2/revwalk.c',
  'src/libgit2/midx.c',
  'src/libgit2/streams/mbedtls.c',
  'src/libgit2/streams/registry.c',
  'src/libgit2/refs.c',
  'src/libgit2/buf.c',
  'src/libgit2/config_entries.c',
  'src/libgit2/describe.c',
  'src/libgit2/attrcache.c',
  'src/libgit2/checkout.c',
  'src/libgit2/mailmap.c',
  'src/libgit2/config_parse.c',
  'src/libgit2/path.c',
  'src/libgit2/index.c',
  'src/libgit2/ignore.c',
  'src/libgit2/proxy.c',
  'src/libgit2/hashsig.c',
  'src/libgit2/delta.c',
  'src/libgit2/crlf.c',
  'src/libgit2/blame_git.c',
  'src/libgit2/reader.c',
  'src/libgit2/fetch.c',
  'src/libgit2/diff_generate.c',
  'src/libgit2/pack.c',
  'src/libgit2/diff_file.c',
  'src/libgit2/oidarray.c',
  'src/libgit2/parse.c',
  'src/libgit2/pathspec.c',
  'src/libgit2/worktree.c',
  'src/libgit2/fetchhead.c',
  'src/libgit2/odb_loose.c',
  'src/libgit2/odb_mempack.c',
  'src/libgit2/stash.c',
  'src/libgit2/diff.c',
  'src/libgit2/revparse.c',
  'src/libgit2/blame.c',
  'src/libgit2/transport.c',
  'src/libgit2/indexer.c',
  'src/libgit2/config_file.c',
  'src/libgit2/sysdir.c',
  'src/libgit2/diff_stats.c',
  'src/libgit2/mwindow.c',
  'src/libgit2/rebase.c',
  'src/libgit2/object.c',
  'src/libgit2/diff_xdiff.c',
  'src/libgit2/trailer.c',
  'src/libgit2/config_mem.c',
  'src/libgit2/config_snapshot.c',
  'src/libgit2/xdiff/xpatience.c',
  'src/libgit2/xdiff/xmerge.c',
  'src/libgit2/xdiff/xemit.c',
  'src/libgit2/xdiff/xhistogram.c',
  'src/libgit2/xdiff/xprepare.c',
  'src/libgit2/xdiff/xutils.c',
  'src/libgit2/config_cache.c',
  'src/libgit2/message.c',
  'src/libgit2/cherrypick.c',
  'src/libgit2/config.c',
  'src/libgit2/merge.c',
  'src/libgit2/commit_list.c',
  'src/libgit2/remote.c',
  'src/libgit2/idxmap.c',
  'src/libgit2/oid.c',
  'src/libgit2/annotated_commit.c',
  'src/libgit2/blob.c',
  'src/libgit2/netops.c',
  'src/libgit2/clone.c',
  'src/libgit2/email.c',
  'src/libgit2/transaction.c',
  'src/libgit2/status.c',
  'src/libgit2/refdb.c',
  'src/libgit2/diff_print.c',
  'src/libgit2/submodule.c',
  'src/libgit2/attr_file.c',
  'src/libgit2/pack-objects.c',
  'src/libgit2/reflog.c',
  'src/libgit2/diff_tform.c',
  'src/libgit2/iterator.c',
  'src/libgit2/offmap.c',
  'src/libgit2/tree-cache.c',
  'src/libgit2/oidmap.c',
  'src/libgit2/notes.c',
  'src/libgit2/revert.c',
  'src/libgit2/tree.c',
  'src/libgit2/repository.c',
  'src/libgit2/tag.c',
  'src/libgit2/transports/http.c',
  'src/libgit2/transports/smart_pkt.c',
  'src/libgit2/transports/credential_helpers.c',
  'src/libgit2/transports/ssh.c',
  'src/libgit2/transports/smart_protocol.c',
  'src/libgit2/transports/auth.c',
  'src/libgit2/transports/winhttp.c',
  'src/libgit2/transports/httpclient.c',
  'src/libgit2/transports/credential.c',
  'src/libgit2/transports/auth_negotiate.c',
  'src/libgit2/transports/smart.c',
  'src/libgit2/cache.c',
  'src/libgit2/transports/auth_ntlm.c',
  'src/libgit2/transports/git.c',
  'src/libgit2/strarray.c',
  'src/libgit2/transports/local.c',
  'src/libgit2/push.c',
  'src/libgit2/object_api.c',
  'src/libgit2/merge_driver.c',
  'src/libgit2/patch.c',
  'src/libgit2/signature.c',
  'src/libgit2/odb_pack.c',
  'src/libgit2/commit_graph.c',
  'src/libgit2/patch_generate.c',
  'src/libgit2/commit.c',
  'src/libgit2/patch_parse.c',
  'src/libgit2/branch.c',
  'src/libgit2/graph.c',
  'src/libgit2/libgit2.c',
  'src/libgit2/xdiff/xdiffi.c',
  'src/libgit2/apply.c',
  'src/libgit2/attr.c',
  'src/libgit2/filter.c',
  'src/libgit2/refdb_fs.c',
  'src/libgit2/ident.c',
  'src/libgit2/refspec.c',
  'src/libgit2/errors.c',
  'src/libgit2/merge_file.c',
  'src/libgit2/iterator.h',
  'src/libgit2/index.h',
  'src/libgit2/streams/openssl_dynamic.h',
  'src/libgit2/streams/openssl_legacy.h',
  'src/libgit2/object.h',
  'src/libgit2/streams/openssl.h',
  'src/libgit2/streams/socket.h',
  'src/libgit2/commit_list.h',
  'src/libgit2/push.h',
  'src/libgit2/streams/registry.h',
  'src/libgit2/pack-objects.h',
  'src/libgit2/streams/tls.h',
  'src/libgit2/attr.h',
  'src/libgit2/streams/stransport.h',
  'src/libgit2/patch.h',
  'src/libgit2/repository.h',
  'src/libgit2/config_parse.h',
  'src/libgit2/strarray.h',
  'src/libgit2/buf.h',
  'src/libgit2/fetchhead.h',
  'src/libgit2/stream.h',
  'src/libgit2/oidmap.h',
  'src/libgit2/indexer.h',
  'src/libgit2/blame.h',
  'src/libgit2/refdb.h',
  'src/libgit2/odb.h',
  'src/libgit2/refs.h',
  'src/libgit2/pathspec.h',
  'src/libgit2/tree.h',
  'src/libgit2/refspec.h',
  'src/libgit2/parse.h',
  'src/libgit2/clone.h',
  'src/libgit2/commit_graph.h',
  'src/libgit2/diff_driver.h',
  'src/libgit2/email.h',
  'src/libgit2/common.h',
  'src/libgit2/repo_template.h',
  'src/libgit2/branch.h',
  'src/libgit2/tag.h',
  'src/libgit2/notes.h',
  'src/libgit2/signature.h',
  'src/libgit2/ignore.h',
  'src/libgit2/commit.h',
  'src/libgit2/reader.h',
  'src/libgit2/mwindow.h',
  'src/libgit2/diff_file.h',
  'src/libgit2/diff_tform.h',
  'src/libgit2/errors.h',
  'src/libgit2/patch_generate.h',
  'src/libgit2/trace.h',
  'src/libgit2/path.h',
  'src/libgit2/worktree.h',
  'src/libgit2/sysdir.h',
  'src/libgit2/xdiff/xdiffi.h',
  'src/libgit2/xdiff/xtypes.h',
  'src/libgit2/xdiff/git-xdiff.h',
  'src/libgit2/xdiff/xutils.h',
  'src/libgit2/xdiff/xmacros.h',
  'src/libgit2/xdiff/xinclude.h',
  'src/libgit2/xdiff/xdiff.h',
  'src/libgit2/xdiff/xemit.h',
  'src/libgit2/xdiff/xprepare.h',
  'src/libgit2/blame_git.h',
  'src/libgit2/diff.h',
  'src/libgit2/netops.h',
  'src/libgit2/reflog.h',
  'src/libgit2/config.h',
  'src/libgit2/apply.h',
  'src/libgit2/attrcache.h',
  'src/libgit2/oid.h',
  'src/libgit2/remote.h',
  'src/libgit2/patch_parse.h',
  'src/libgit2/transaction.h',
  'src/libgit2/checkout.h',
  'src/libgit2/libgit2.h',
  'src/libgit2/offmap.h',
  'src/libgit2/oidarray.h',
  'src/libgit2/attr_file.h',
  'src/libgit2/submodule.h',
  'src/libgit2/merge_driver.h',
  'src/libgit2/proxy.h',
  'src/libgit2/config_backend.h',
  'src/libgit2/cache.h',
  'src/libgit2/diff_stats.h',
  'src/libgit2/fetch.h',
  'src/libgit2/annotated_commit.h',
  'src/libgit2/userdiff.h',
  'src/libgit2/pack.h',
  'src/libgit2/filter.h',
  'src/libgit2/idxmap.h',
  'src/libgit2/merge.h',
  'src/libgit2/transports/smart.h',
  'src/libgit2/delta.h',
  'src/libgit2/transports/http.h',
  'src/libgit2/transports/auth.h',
  'src/libgit2/transports/auth_negotiate.h',
  'src/libgit2/transports/httpclient.h',
  'src/libgit2/transports/auth_ntlm.h',
  'src/libgit2/transports/ssh.h',
  'src/libgit2/midx.h',
  'src/libgit2/diff_xdiff.h',
  'src/libgit2/diff_parse.h',
  'src/libgit2/revwalk.h',
  'src/libgit2/config_entries.h',
  'src/libgit2/diff_generate.h',
  'src/libgit2/settings.h',
  'src/libgit2/blob.h',
  'src/libgit2/mailmap.h',
  'src/libgit2/streams/mbedtls.h',
  'src/libgit2/threadstate.h',
  'src/libgit2/status.h',
  'src/libgit2/tree-cache.h',

  # util
  'src/util/pool.h',
  'src/util/array.h',
  'src/util/map.h',
  'src/util/assert_safe.h',
  'src/util/str.c',
  'src/util/pqueue.c',
  'src/util/fs_path.h',
  'src/util/thread.c',
  'src/util/integer.h',
  'src/util/runtime.c',
  'src/util/wildmatch.c',
  'src/util/varint.h',
  'src/util/futils.c',
  'src/util/sortedcache.h',
  'src/util/strnlen.h',
  'src/util/utf8.c',
  'src/util/date.c',
  'src/util/rand.c',
  'src/util/vector.h',
  'src/util/alloc.c',
  'src/util/regexp.c',
  'src/util/cc-compat.h',
  'src/util/util.h',
  'src/util/net.h',
  'src/util/zstream.h',
  'src/util/git2_util.h',
  'src/util/posix.h',
  'src/util/varint.c',
  'src/util/bitvec.h',
  'src/util/date.h',
  'src/util/regexp.h',
  'src/util/runtime.h',
  'src/util/net.c',
  'src/util/futils.h',
  'src/util/posix.c',
  'src/util/wildmatch.h',
  'src/util/thread.h',
  'src/util/hash.h',
  'src/util/khash.h',
  'src/util/tsort.c',
  'src/util/pqueue.h',
  'src/util/strmap.h',
  'src/util/hash.c',
  'src/util/strmap.c',
  'src/util/sortedcache.c',
  'src/util/zstream.c',
  'src/util/util.c',
  'src/util/vector.c',
  'src/util/filebuf.h',
  'src/util/fs_path.c',
  'src/util/pool.c',
  'src/util/filebuf.c',
  'src/util/alloc.h',
  'src/util/utf8.h',
  'src/util/rand.h',
  'src/util/str.h',

  'src/util/allocators/stdalloc.h',
  'src/util/allocators/stdalloc.c',
  'src/util/allocators/win32_leakcheck.c',
  'src/util/allocators/failalloc.c',
  'src/util/allocators/failalloc.h',
  'src/util/allocators/win32_leakcheck.h',

  'src/util/hash/sha.h',
)

if host_machine.system() == 'windows'
  srcs += files(
    'src/util/win32/dir.h',
    'src/util/win32/thread.c',
    'src/util/win32/error.h',
    'src/util/win32/utf-conv.h',
    'src/util/win32/dir.c',
    'src/util/win32/error.c',
    'src/util/win32/path_w32.h',
    'src/util/win32/path_w32.c',
    'src/util/win32/precompiled.c',
    'src/util/win32/map.c',
    'src/util/win32/mingw-compat.h',
    'src/util/win32/msvc-compat.h',
    'src/util/win32/w32_leakcheck.h',
    'src/util/win32/w32_buffer.h',
    'src/util/win32/posix.h',
    'src/util/win32/precompiled.h',
    'src/util/win32/utf-conv.c',
    'src/util/win32/w32_util.h',
    'src/util/win32/win32-compat.h',
    'src/util/win32/version.h',
    'src/util/win32/w32_common.h',
    'src/util/win32/w32_buffer.c',
    'src/util/win32/w32_util.c',
    'src/util/win32/w32_leakcheck.c',
    'src/util/win32/thread.h',
    'src/util/win32/posix_w32.c',
    'src/util/win32/reparse.h',
  )
else
  srcs += files(
    'src/util/unix/map.c',
    'src/util/unix/posix.h',
    'src/util/unix/pthread.h',
    'src/util/unix/realpath.c',
  )
endif

########## Configuration specific

if sha1_backend == 'collision_detection'
  srcs += files(
    'src/util/hash/collisiondetect.c',
    'src/util/hash/collisiondetect.h',
    'src/util/hash/sha1dc/sha1.c',
    'src/util/hash/sha1dc/sha1.h',
    'src/util/hash/sha1dc/ubc_check.c',
    'src/util/hash/sha1dc/ubc_check.h',
  )
  defines += ['-DGIT_SHA1_COLLISIONDETECT=1']
endif

if sha256_backend == 'builtin'
  srcs += files(
    'src/util/hash/builtin.c',
    'src/util/hash/builtin.h',
    'src/util/hash/rfc6234/sha.h',
    'src/util/hash/rfc6234/sha224-256.c',
  )
  defines += ['-DGIT_SHA256_BUILTIN=1']
endif

if regex_backend == 'builtin' or regex_backend == 'pcre'
  subdir('deps/pcre')
  defines += ['-DGIT_REGEX_BUILTIN=1']
endif

subdir('deps/http-parser')

cc = meson.get_compiler('c')
if cc.sizeof('void*') == 8
    defines += ['-DGIT_ARCH_64=1']
elif cc.sizeof('void*') == 4
	defines += ['-DGIT_ARCH_32=1']
else
	error('Unsupported architecture (pointer size is ' + cc.sizeof('void*') + ' bytes)')
endif

if get_option('threadsafe')
    defines += ['-DGIT_TREADS=1']
endif

########## Actual library declaration

libgit2 = library(
  'git2',
  srcs,
  include_directories: [
    git2_include,
    include_directories(
      'src/libgit2',
      'src/libgit2/streams',
      'src/libgit2/transports',
      'src/libgit2/xdiff',
      'src/util',
      'src/util/allocators',
      'src/util/hash',
      'src/util/unix',
      'deps/http-parser',
    ),
  ],
  c_args: defines,
  link_with: [pcre, http_parser],
  dependencies: [zlib, openssl]
)

libgit2_dep = declare_dependency(
  link_with: libgit2,
)
